# OptiMap

./: .gitignore  CMakeLists.txt  README.md  matrix_mul.ll
include/: CompilerMemory.hpp  CostEstimator.hpp  HHESS.hpp  IRInstruction.hpp  LLVMFrontend.hpp  MLPModel.hpp  MemoryMapper.hpp  NSS.hpp  StrategyGenerator.hpp
src/: CompilerMemory.cpp  CostEstimator.cpp  HHESS.cpp  IRInstruction.cpp  LLVMFrontend.cpp  MLPModel.cpp  MemoryMapper.cpp  NSS.cpp  StrategyGenerator.cpp  main.cpp
